syntax = "proto3";

package heartbeat_pb;

import "google/api/annotations.proto";

option go_package="/heartbeat_pb";

message HeartBeat {
    int32 bpm = 1;
    string username = 2;
}

message HeartBeatRequest {
    HeartBeat heartbeat = 1;
}

message HeartBeatResponse {
    string result = 1;
}

message LiveHeartBeatRequest {
    HeartBeat heartbeat = 1;
}

message LiveHeartBeatResponse {
    string result = 1;
}

message HeartBeatHistoryRequest {
    string username = 1;
}

message HeartBeatHistoryResponse {
    HeartBeat heartbeat = 1;
}

message NormalAbnormalHeartBeatRequest {
    int32 bpm = 1;
}

message NormalAbnormalHeartBeatResponse {
    string result = 1;
}

service HeartBeatService {
    rpc UserHeartBeat(HeartBeatRequest) returns (HeartBeatResponse) {
        option (google.api.http) = {
            post: "/v1/test"
            body: "*"
        };
    };
    rpc LiveHeartBeat(stream LiveHeartBeatRequest) returns (LiveHeartBeatResponse) {};
    rpc HeartBeatHistory(HeartBeatHistoryRequest) returns (stream HeartBeatHistoryResponse) {};
    rpc NormalAbnormalHeartBeat(stream NormalAbnormalHeartBeatRequest) returns (stream NormalAbnormalHeartBeatResponse) {};
}